# Hurricane_damage-detector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
damage_detector/: Hurricane_Damage_Detector.py  augmentation.py  data_utils.py  model.py  model_loader.py
riskscope/: config.py  data_utils.py  eval_viz.py  logging_setup.py  main.py  model.py
tests/: test_augmentation.py  test_data_utils.py  test_model.py
